# postgres-performance

./: README.md  docker-compose.yml
connect-test/: Cargo.toml  flake.nix
connect-test/benches/: pg.rs
connect-test/src/: main.rs
grafana/dashboards/: dashboard.yml
grafana/datasources/: prometheus.yml
postgres/: postgresql.conf
prometheus/: prometheus.yml
