[package]
name = "connect-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-postgres = { path = "../../rust-postgres/tokio-postgres" }
anyhow = "1"
once_cell = "1"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "pg"
harness = false
